unpackaged/objects/Capstone_Module__c.object
<CustomObject>
    <fields>
        <fullName>Capstone_Code__c</fullName>
        <label>Capstone Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capstone_Supervisor_Decision_Date__c</fullName>
        <label>Capstone Supervisor Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capstone_Supervisor_Decision__c</fullName>
        <label>Capstone Supervisor Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Capstone Project Proposal</relationshipLabel>
        <relationshipName>Capstone_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Supervisor_Decision_Date__c</fullName>
        <label>Capstone Co-Supervisor Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Supervisor_Decision__c</fullName>
        <label>Capstone Co-Supervisor Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Supervisor_Email__c</fullName>
        <label>Yale-NUS Co-Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Co_Supervisor_Name__c</fullName>
        <label>Yale-NUS Co-Supervisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Capstone Module Proposal Form</relationshipLabel>
        <relationshipName>Capstone_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Capstone Module Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_approved_revision__c</fullName>
        <label>Date of approved revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_original_approval__c</fullName>
        <label>Date of original approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Decision_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Head Of Studies</fullName>
                </value>
                <value>
                    <fullName>Designate</fullName>
                </value>
                <value>
                    <fullName>Capstone Project Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Supervisor_Affliation__c</fullName>
        <label>Project Supervisor Affliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Supervisor_Email__c</fullName>
        <label>Project Supervisor Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Supervisor_Exterent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Supervisor is not from Yale-NUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Supervisor_Name__c</fullName>
        <label>Project Supervisor Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervision__c</fullName>
        <label>Supervision</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Capstone Module</label>
    <nameField>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Capstone Module ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capstone Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>